table-head style fix right align

--- a/src/assets/style/table.scss
+++ b/src/assets/style/table.scss
@@ -3,6 +3,7 @@ $alert-status: #ff9d3f;
 $error-status: #f05545;
 $error-background: #ffb8ab;
 $text-on-dark: #fafafa;
+$text-on-alert: #000000;
 $icon-size: 1.3rem;
 
 .thumb img {
@@ -27,7 +28,7 @@ $icon-size: 1.3rem;
 
 .filtro-alert {
   background-color: $error-background !important;
-  color: $text-on-dark;
+  color: $text-on-alert;
 }
 
 .filtro-alert,
@@ -35,6 +36,7 @@ $icon-size: 1.3rem;
 .discount,
 .item {
   cursor: pointer;
+  color: black !important;
 }
 
 .price,
